set03/problem06_compile_errors.txt
Compilation started at 11/11/2023, 8:48:16 PM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 11/11/2023, 8:48:22 PM
Compilation started at 11/11/2023, 8:48:57 PM
Compilation finished at 11/11/2023, 8:49:01 PM
Compilation started at 11/11/2023, 9:28:02 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'sub_str_index':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:32:10: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     index=strstr(string,substring);
          ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'output':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:38:14: warning: comparison between pointer and integer
     if (index!=NULL)
              ^~
Compilation finished at 11/11/2023, 9:28:07 PM
Compilation started at 11/11/2023, 9:28:47 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:14:16: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
     char index=NULL;
                ^~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'sub_str_index':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:32:10: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     index=strstr(string,substring);
          ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'output':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:38:14: warning: comparison between pointer and integer
     if (index!=NULL)
              ^~
Compilation finished at 11/11/2023, 9:28:51 PM
Compilation started at 11/11/2023, 9:34:10 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'sub_str_index':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:35:22: warning: comparison between pointer and integer
         if (string[i]==ptr)
                      ^~
Compilation finished at 11/11/2023, 9:34:14 PM
Compilation started at 11/11/2023, 9:35:24 PM
Compilation finished at 11/11/2023, 9:35:27 PM
Compilation started at 11/11/2023, 9:36:51 PM
Compilation finished at 11/11/2023, 9:36:54 PM
Compilation started at 11/14/2023, 12:16:10 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'sub_str_index':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:30:19: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     for(int i=0;i<strlen(string);i++)
                   ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:30:19: warning: incompatible implicit declaration of built-in function 'strlen'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:30:19: note: include '<string.h>' or provide a declaration of 'strlen'
Compilation finished at 11/14/2023, 12:16:15 PM
Compilation started at 11/14/2023, 12:17:17 PM
Compilation finished at 11/14/2023, 12:17:22 PM
Compilation started at 11/14/2023, 12:19:05 PM
Compilation finished at 11/14/2023, 12:19:11 PM
Compilation started at 11/14/2023, 12:27:51 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c: In function 'sub_str_index':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:48:12: error: 'index' undeclared (first use in this function)
     return index;
            ^~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set03\problem06.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 11/14/2023, 12:27:54 PM
Compilation started at 11/14/2023, 12:28:14 PM
Compilation finished at 11/14/2023, 12:28:18 PM
Compilation started at 11/14/2023, 12:29:35 PM
Compilation finished at 11/14/2023, 12:29:41 PM
Compilation started at 11/14/2023, 1:18:50 PM
Compilation finished at 11/14/2023, 1:18:53 PM
Compilation started at 11/14/2023, 1:20:49 PM
Compilation finished at 11/14/2023, 1:20:53 PM
Compilation started at 11/14/2023, 1:25:26 PM
Compilation finished at 11/14/2023, 1:25:30 PM
